--- a/app/src/main/res/layout/fragment_todos_list.xml
+++ b/app/src/main/res/layout/fragment_todos_list.xml
@@ -13,4 +13,14 @@
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
 
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/fab_button"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:clickable="true"
+       android:layout_gravity="bottom|end"
+       android:layout_margin="@dimen/fab_margin"
+       android:src="@drawable/ic_baseline_add_circle_24" />
+
+
 </FrameLayout>
